113: Adjust CSS for mobile devices

--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -587,7 +587,12 @@ th {
     .confirm label,
     .confirm button,
     .confirm a {
-        font-size: medium;
+        font-size: smaller;
+    }
+
+    .searchArea label,
+    .searchArea input {
+        font-size: smaller;
     }
 
     select {
