--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -8,10 +8,10 @@ body, button, input {
     padding: 5%;
     border-radius: 5px;
     text-decoration: none;
-    font-size: xxx-large;
+    font-size: 32pt;
     white-space: normal;
     word-wrap: break-word;
-    width: 95%;
+    width: 90%;
     display: block;
     margin: auto auto 1%;
     color: rgb(250, 250, 250);
@@ -119,7 +119,6 @@ body, button, input {
     vertical-align: center;
     padding-top: 5px;
     padding-bottom: 5px;
-    border: 0;
     height: 100%;
     width: 100%;
     word-wrap: break-word;
