31: Use kebab case

--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -2,7 +2,7 @@ body, button, input {
     font-family: Arial, sans-serif;
 }
 
-.overviewButton {
+.overview-button {
     border: none;
     text-align: center;
     padding: 5%;
@@ -14,32 +14,32 @@ body, button, input {
     width: 90%;
     display: block;
     margin: auto auto 1%;
-    color: rgb(250, 250, 250);
-    background-color: rgb(66, 100, 160);
+    color: rgb(250 250 250);
+    background-color: rgb(66 100 160);
 }
 
-.overviewButton:hover,
-.navigationButton:hover:not(.disabled),
-.pagerButton:hover:not(.disabled),
-.errorButton:hover:not(.disabled) {
-    background-color: rgb(100, 149, 237);
+.overview-button:hover,
+.navigation-button:hover:not(.disabled),
+.pager-button:hover:not(.disabled),
+.error-button:hover:not(.disabled) {
+    background-color: rgb(100 149 237);
 }
 
-.menuButton {
-    background-color: rgb(23, 162, 184);
+.menu-button {
+    background-color: rgb(23 162 184);
 }
 
-.menuButton:hover {
-    background-color: rgb(40, 180, 200);
+.menu-button:hover {
+    background-color: rgb(40 180 200);
 }
 
-.nutrientsButton:hover {
-    background-color: rgb(170, 102, 204);
+.nutrients-button:hover {
+    background-color: rgb(170 102 204);
 }
 
-.addButton {
-    background-color: rgb(50, 180, 50);
-    color: rgb(250, 250, 250);
+.add-button {
+    background-color: rgb(50 180 50);
+    color: rgb(250 250 250);
     border: none;
     text-align: center;
     padding: 1%;
@@ -51,12 +51,12 @@ body, button, input {
     margin: auto auto 1%;
 }
 
-.addButton:hover {
-    background-color: rgb(85, 225, 60);
+.add-button:hover {
+    background-color: rgb(85 225 60);
 }
 
 #navigation table,
-.elementsWithControlsTable {
+.elements-with-controls-table {
     border-spacing: 0;
     width: 100%;
     table-layout: fixed;
@@ -64,51 +64,51 @@ body, button, input {
     position: relative;
 }
 
-.elementsWithControlsTable thead th {
+.elements-with-controls-table thead th {
     font-weight: lighter;
-    color: rgb(250, 250, 250);;
+    color: rgb(250 250 250);;
     background-color: gray;
     text-transform: uppercase;
 }
 
-.elementsWithControlsTable thead th:not(.numberLabel) {
+.elements-with-controls-table thead th:not(.number-label) {
     text-align: left;
 }
 
-.searchArea {
+.search-area {
     display: inline-block;
     margin-top: 20px;
     margin-bottom: 20px;
     text-align: left;
 }
 
-.searchArea input {
+.search-area input {
     width: 50%;
     margin: 3px;
 }
 
-.searchArea label,
-.searchArea button {
+.search-area label,
+.search-area button {
     width: 20%
 }
 
-.searchArea label,
-.searchArea input {
+.search-area label,
+.search-area input {
     font-size: medium;
 }
 
-.editButton,
-.editorButton,
-.deleteButton,
-.confirmButton,
-.cancelButton,
-.selectButton,
-.logoutButton,
-.alternativeButton,
-.nutrientsButton,
-.menuButton,
-.errorButton {
-    color: rgb(250, 250, 250);
+.edit-button,
+.editor-button,
+.delete-button,
+.confirm-button,
+.cancel-button,
+.select-button,
+.logout-button,
+.alternative-button,
+.nutrients-button,
+.menu-button,
+.error-button {
+    color: rgb(250 250 250);
     border: none;
     text-align: center;
     border-radius: 5px;
@@ -125,7 +125,7 @@ body, button, input {
     white-space: break-spaces;
 }
 
-.alternativeButton {
+.alternative-button {
     width: auto;
 }
 
@@ -139,29 +139,29 @@ select {
     font-size: medium;
 }
 
-.editButton:disabled,
-.editorButton:disabled,
-.deleteButton:disabled,
-.confirmButton:disabled,
-.cancelButton:disabled,
-.selectButton:disabled,
-.navigationButton:disabled,
-.pagerButton:disabled,
-.alternativeButton:disabled {
+.edit-button:disabled,
+.editor-button:disabled,
+.delete-button:disabled,
+.confirm-button:disabled,
+.cancel-button:disabled,
+.select-button:disabled,
+.navigation-button:disabled,
+.pager-button:disabled,
+.alternative-button:disabled {
     background-color: gray;
     cursor: not-allowed;
 }
 
-#addRecipeView .editable,
-#addMealView .editable:not(.date, .time),
-#addReferenceMapView .editable,
-#ingredientEditor .editable,
-#mealEntryEditor .editable:not(.date, .time),
-#referenceEntryEditor .editable,
+#add-recipe-view .editable,
+#add-meal-view .editable:not(.date, .time),
+#add-reference-map-view .editable,
+#ingredient-editor .editable,
+#meal-entry-editor .editable:not(.date, .time),
+#reference-entry-editor .editable,
 #statistics .editable:not(.date),
-#complexFoodEditor .editable,
-.partialStatistics .editable,
-#statisticsRecipeOccurrence .editable {
+#complex-food-editor .editable,
+.partial-statistics .editable,
+#statistics-recipe-occurrence .editable {
     white-space: break-spaces;
     word-wrap: break-word;
 }
@@ -174,81 +174,81 @@ th {
     background: white;
 }
 
-#addRecipeView th:first-child,
-#ingredientEditor .recipeEditTable th:first-child {
+#add-recipe-view th:first-child,
+#ingredient-editor .recipe-edit-table th:first-child {
     width: 20%;
 }
 
-#addRecipeView th:nth-child(2),
-#ingredientEditor .recipeEditTable th:nth-child(2) {
+#add-recipe-view th:nth-child(2),
+#ingredient-editor .recipe-edit-table th:nth-child(2) {
     width: 27%;
 }
 
-#addRecipeView th:nth-child(3),
-#ingredientEditor .recipeEditTable th:nth-child(3) {
+#add-recipe-view th:nth-child(3),
+#ingredient-editor .recipe-edit-table th:nth-child(3) {
     width: 23%;
 }
 
-#addMealView th:first-child,
-#mealEntryEditor .mealEditTable th:first-child,
+#add-meal-view th:first-child,
+#meal-entry-editor .meal-edit-table th:first-child,
 #statistics .meals th:first-child,
-#statisticsMeal th:first-child {
+#statistics-meal th:first-child {
     width: 25%;
 }
 
-#addMealView th:nth-child(2):not(input),
-#mealEntryEditor .mealEditTable th:nth-child(2):not(input),
+#add-meal-view th:nth-child(2):not(input),
+#meal-entry-editor .meal-edit-table th:nth-child(2):not(input),
 #statistics .meals th:nth-child(2),
-#statisticsMeal th:nth-child(2) {
+#statistics-meal th:nth-child(2) {
     width: 15%;
 }
 
-#mealEntryEditor .addView .addElement th:first-child,
-#mealEntryEditor .elementEditTable th:first-child {
+#meal-entry-editor .add-view .add-element th:first-child,
+#meal-entry-editor .element-edit-table th:first-child {
     width: 20%
 }
 
-#mealEntryEditor .addView .addElement th:nth-child(2),
-#mealEntryEditor .elementEditTable th:nth-child(2) {
+#meal-entry-editor .add-view .add-element th:nth-child(2),
+#meal-entry-editor .element-edit-table th:nth-child(2) {
     width: 27%
 }
 
-#mealEntryEditor .addView .addElement th:nth-child(3),
-#mealEntryEditor .elementEditTable th:nth-child(3) {
+#meal-entry-editor .add-view .add-element th:nth-child(3),
+#meal-entry-editor .element-edit-table th:nth-child(3) {
     width: 20%
 }
 
-#referenceEntryEditor .elementEditTable th:first-child,
-#referenceEntryEditor .addView .addElement th:first-child {
+#reference-entry-editor .element-edit-table th:first-child,
+#reference-entry-editor .add-view .add-element th:first-child {
     width: 40%;
 }
 
-#referenceEntryEditor .elementEditTable th:nth-child(2),
-#referenceEntryEditor .addView .addElement th:nth-child(2) {
+#reference-entry-editor .element-edit-table th:nth-child(2),
+#reference-entry-editor .add-view .add-element th:nth-child(2) {
     width: 35%
 }
 
-#ingredientEditor .elementEditTable th:first-child,
-#ingredientEditor .addView .addElement th:first-child {
+#ingredient-editor .element-edit-table th:first-child,
+#ingredient-editor .add-view .add-element th:first-child {
     width: 50%
 }
 
-#ingredientEditor .elementEditTable th:nth-child(2),
-#ingredientEditor .addView .addElement th:first-child th:nth-child(2) {
+#ingredient-editor .element-edit-table th:nth-child(2),
+#ingredient-editor .add-view .add-element th:first-child th:nth-child(2) {
     width: 20%;
 }
 
-#statistics .intervalSelection th:first-child,
-#statistics .intervalSelection th:nth-child(2) {
+#statistics .interval-selection th:first-child,
+#statistics .interval-selection th:nth-child(2) {
     width: 10%;
 }
 
-#statistics .intervalSelection th:nth-child(3) {
+#statistics .interval-selection th:nth-child(3) {
     width: 20%;
 }
 
 #statistics .nutrients th:first-child,
-.partialStatistics .nutrients th:first-child {
+.partial-statistics .nutrients th:first-child {
     width: 20%;
 }
 
@@ -265,72 +265,72 @@ th {
 }
 
 #statistics .nutrients th:nth-child(5),
-.partialStatistics .nutrients th:nth-child(4) {
+.partial-statistics .nutrients th:nth-child(4) {
     width: 10%;
 }
 
-.partialStatistics .nutrients th:nth-child(2),
-.partialStatistics .nutrients th:nth-child(3) {
+.partial-statistics .nutrients th:nth-child(2),
+.partial-statistics .nutrients th:nth-child(3) {
     width: 25%;
 }
 
-#statisticsFood th:first-child {
+#statistics-food th:first-child {
     width: 80%;
 }
 
-#statisticsComplexFood th:first-child {
+#statistics-complex-food th:first-child {
     width: 60%;
 }
 
-#statisticsRecipe th:first-child {
+#statistics-recipe th:first-child {
     width: 30%;
 }
 
-#statisticsRecipe th:nth-child(2) {
+#statistics-recipe th:nth-child(2) {
     width: 30%;
 }
 
-#complexFoodEditor .elementEditTable th:first-child {
+#complex-food-editor .element-edit-table th:first-child {
     width: 40%
 }
 
-#complexFoodEditor .elementEditTable th:nth-child(2) {
+#complex-food-editor .element-edit-table th:nth-child(2) {
     width: 22%
 }
 
-#complexFoodEditor .addView .addElement th:first-child {
+#complex-food-editor .add-view .add-element th:first-child {
     width: 10%
 }
 
-#complexFoodEditor .addView .addElement th:nth-child(2) {
+#complex-food-editor .add-view .add-element th:nth-child(2) {
     width: 23%
 }
 
-#complexFoodEditor .addView .addElement th:nth-child(3) {
+#complex-food-editor .add-view .add-element th:nth-child(3) {
     width: 10%
 }
 
-#complexFoodEditor .addView .addElement th:nth-child(4) {
+#complex-food-editor .add-view .add-element th:nth-child(4) {
     width: 15%
 }
 
-#complexFoodEditor .addView .addElement th:nth-child(5) {
+#complex-food-editor .add-view .add-element th:nth-child(5) {
     width: 15%
 }
 
-#statisticsRecipeOccurrence th:first-child {
+#statistics-recipe-occurrence th:first-child {
     width: 12.5%;
 }
 
-#statisticsRecipeOccurrence th:nth-child(2) {
+#statistics-recipe-occurrence th:nth-child(2) {
     width: 12.5%;
 }
 
-#statisticsRecipeOccurrence th:nth-child(3) {
+#statistics-recipe-occurrence th:nth-child(3) {
     width: 25%;
 }
 
-#statisticsRecipeOccurrence th:nth-child(4) {
+#statistics-recipe-occurrence th:nth-child(4) {
     width: 10%;
 }
 
@@ -346,73 +346,73 @@ th {
     color: #0492c2; /* cerulean */
 }
 
-.numberLabel,
-.numberCell {
+.number-label,
+.number-cell {
     text-align: right;
     padding-right: 5px;
 }
 
-.editButton {
-    background-color: rgb(255, 181, 39);
+.edit-button {
+    background-color: rgb(255 181 39);
 }
 
-.editButton:hover:enabled {
-    background-color: rgb(255, 210, 50);
+.edit-button:hover:enabled {
+    background-color: rgb(255 210 50);
 }
 
-.deleteButton,
-.cancelButton {
-    background-color: rgb(214, 69, 70);
+.delete-button,
+.cancel-button {
+    background-color: rgb(214 69 70);
 }
 
-.deleteButton:hover:enabled,
-.cancelButton:hover:enabled {
-    background-color: rgb(250, 100, 100);
+.delete-button:hover:enabled,
+.cancel-button:hover:enabled {
+    background-color: rgb(250 100 100);
 }
 
-.logoutButton {
-    background-color: rgb(66, 100, 160);
+.logout-button {
+    background-color: rgb(66 100 160);
 }
 
-.logoutButton:hover:enabled {
-    background-color: rgb(100, 149, 237);
+.logout-button:hover:enabled {
+    background-color: rgb(100 149 237);
 }
 
-.editorButton {
+.editor-button {
     background-color: rgba(65, 105, 225);
 }
 
-.editorButton:hover {
+.editor-button:hover {
     background-color: rgba(90, 130, 240);
 }
 
-.selectButton,
-.confirmButton {
-    background-color: rgb(54, 217, 54);
+.select-button,
+.confirm-button {
+    background-color: rgb(54 217 54);
 }
 
-.selectButton:hover:enabled,
-.selectButton:hover:not(.disabled),
-.confirmButton:hover:enabled {
-    background-color: rgb(70, 240, 70);
+.select-button:hover:enabled,
+.select-button:hover:not(.disabled),
+.confirm-button:hover:enabled {
+    background-color: rgb(70 240 70);
 }
 
-.alternativeButton {
-    background-color: rgb(25, 206, 235);
+.alternative-button {
+    background-color: rgb(25 206 235);
 }
 
-.alternativeButton:hover:enabled {
-    background-color: rgb(40, 230, 250);
+.alternative-button:hover:enabled {
+    background-color: rgb(40 230 250);
 }
 
-#addRecipeView input:not(.searchField),
-#addMealView input:not(.searchField),
-#addReferenceMapView input:not(.searchField),
-#ingredientEditor input:not(.searchField),
-#complexFoodEditor input:not(.searchField),
-#mealEntryEditor input:not(.searchField),
-#referenceEntryEditor input:not(.searchField),
-#statistics input:not(.searchField) {
+#add-recipe-view input:not(.search-field),
+#add-meal-view input:not(.search-field),
+#add-reference-map-view input:not(.search-field),
+#ingredient-editor input:not(.search-field),
+#complex-food-editor input:not(.search-field),
+#meal-entry-editor input:not(.search-field),
+#reference-entry-editor input:not(.search-field),
+#statistics input:not(.search-field) {
     box-sizing: border-box;
     width: 100%;
     font-size: medium;
@@ -420,7 +420,7 @@ th {
 
 .editing:not(.controls):hover,
 .editLine:hover {
-    background-color: rgb(220, 220, 220);
+    background-color: rgb(220 220 220);
 }
 
 .elements {
@@ -429,7 +429,7 @@ th {
     padding-bottom: 10px;
 }
 
-.searchField {
+.search-field {
     margin-top: 20px;
     margin-bottom: 20px;
 }
@@ -500,9 +500,9 @@ th {
     font-weight: lighter;
 }
 
-.navigationButton,
-.pagerButton {
-    color: rgb(250, 250, 250);
+.navigation-button,
+.pager-button {
+    color: rgb(250 250 250);
     text-align: center;
     border-radius: 5px;
     text-decoration: none;
@@ -516,14 +516,14 @@ th {
     border: none;
 }
 
-.navigationButton,
-.pagerButton,
-.errorButton {
-    background-color: rgb(66, 100, 160);
+.navigation-button,
+.pager-button,
+.error-button {
+    background-color: rgb(66 100 160);
 }
 
-.nutrientsButton {
-    background-color: rgb(153, 51, 204);
+.nutrients-button {
+    background-color: rgb(153 51 204);
 }
 
 .ellipsis {
@@ -550,32 +550,32 @@ th {
 }
 
 .incomplete {
-    text-decoration: underline dashed rgb(218, 112, 214);
+    text-decoration: underline dashed rgb(218 112 214);
 }
 
 
-#statisticsRecipeOccurrence .sortControls button {
+#statistics-recipe-occurrence .sort-controls button {
     margin-left: 5px;
     margin-bottom: 5px;
 }
 
 @media only screen and (orientation: portrait) {
-    .elementsWithControlsTable thead th {
+    .elements-with-controls-table thead th {
         font-size: small;
     }
 
-    .editButton,
-    .editorButton,
-    .deleteButton,
-    .confirmButton,
-    .cancelButton,
-    .selectButton,
-    .logoutButton,
-    .alternativeButton,
-    .nutrientsButton,
-    .menuButton,
-    .errorButton,
-    .addButton,
+    .edit-button,
+    .editor-button,
+    .delete-button,
+    .confirm-button,
+    .cancel-button,
+    .select-button,
+    .logout-button,
+    .alternative-button,
+    .nutrients-button,
+    .menu-button,
+    .error-button,
+    .add-button,
     #login input,
     #login label,
     #login button,
